Fix Dark mode black contact name
When Facebook account is disabled you can still use messenger, but the name is not <a> so it looks bad in dark mode.

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -349,6 +349,11 @@ html.dark-mode ._3eur a {
 	color: var(--blue);
 }
 
+/* Right sidebar: disabled contact name */
+html.dark-mode ._3eur {
+	color: var(--base-seventy);
+}
+
 /* Right sidebar: menus background */
 html.dark-mode ._54ng {
 	background: var(--container-color);
